Fix z-index of for nvtooltip

--- a/zeppelin-web/src/app/notebook/notebook.css
+++ b/zeppelin-web/src/app/notebook/notebook.css
@@ -74,6 +74,10 @@
   pointer-events: none;
 }
 
+.navbar-fixed-top .dropdown-menu {
+  z-index: 1002;
+}
+
 .noteAction {
   margin-left: -10px;
   margin-right: -10px;
@@ -83,7 +87,7 @@
   top: 50px;
   width: 100%;
   height: 54px;
-  z-index: 1030;
+  z-index: 1001;
 }
 
 .noteAction h3 {
